<resources>
    <string name="app_name">Clockwerks</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Clockwerks: Time Tracker</string>
    <string name="nav_header_subtitle">Sauraav Jayrajh ST10024620</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="title_activity_nav_drawer_account">NavDrawer_Account</string>
    <string name="sign_me_up"><u>Sign Up!</u></string>
    <string name="log_me_in"><u>Log In!</u></string>
    <string name="about_info">Made by: Sauraav Jayrajh ST10024620\nVersion 1.0\n</string>
    <string name="About_Desc">Clockwerks Time Tracker is a simple and easy to use time tracking app that helps you keep track of your work hours for client projects. It is designed to be simple and easy to use, so you can focus on what you need to do. With Clockwerks, you can easily track your time and tasks, set reminders, and keep track of your progress. Whether you are a student, a professional, or just someone who wants to be more productive, Clockwerks can help you stay on track and get things done.</string>
    <string name="forgot_password"><u>Did you forget your password?</u></string>
    <string name="default_web_client_id">126366712335-6qa2b2mc8kgfge2jsm8tptrbjqod5t22.apps.googleusercontent.com</string>
    <string name="success_message">Hooorayyy!!!! You hit your goal for today!!</string>
</resources>