<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_bar_gears_bg_hd"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView_NavHead"
        android:layout_width="90dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/clockwerk_logo_icon" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bananaBrown"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView_NavTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/bananaBrown"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView_NavSubTitle"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nav_header_subtitle"
        android:textSize="12sp"
        tools:ignore="TextSizeCheck,TextContrastCheck"
        android:textColor="@color/bananaBrown"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bananaBrown"
        android:layout_marginTop="3dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>